--- a/PixelSort/app/src/main/res/layout/activity_albums.xml
+++ b/PixelSort/app/src/main/res/layout/activity_albums.xml
@@ -148,10 +148,10 @@
         android:id="@+id/currentPage"
         android:layout_width="wrap_content"
         android:layout_height="7dp"
-        android:layout_marginStart="315dp"
+        android:layout_marginEnd="45dp"
         android:background="@drawable/current_page"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ProgressBar
         android:id="@+id/imageProgressAl"
