added archive + permanent delete button upon select

--- a/PixelSort/app/src/main/res/layout/activity_archive.xml
+++ b/PixelSort/app/src/main/res/layout/activity_archive.xml
@@ -195,13 +195,14 @@
         android:background="#E934495E"
         android:visibility="gone"
         android:orientation="horizontal"
+        android:gravity="center_horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/navbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:id="@+id/deletePhotos"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:background="#F934495E"
             android:paddingLeft="5dp"
@@ -221,6 +222,7 @@
                 android:id="@+id/deleteText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="Delete"
                 android:textColor="#ECF0F1"
                 android:fontFamily="@font/roboto"/>
@@ -233,7 +235,7 @@
 
         <LinearLayout
             android:id="@+id/unarchivePhotos"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:background="#F934495E"
             android:paddingLeft="5dp"
@@ -253,6 +255,7 @@
                 android:id="@+id/unarchiveText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="Unarchive"
                 android:textColor="#ECF0F1"
                 android:fontFamily="@font/roboto"/>
