--- a/PixelSort/app/src/main/res/layout/activity_photos.xml
+++ b/PixelSort/app/src/main/res/layout/activity_photos.xml
@@ -399,6 +399,17 @@
         app:layout_constraintTop_toBottomOf="@+id/sortOptions"
         app:layout_constraintVertical_bias="0.0"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerSortDayImages"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:padding="6dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/navbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sortOptions"
+        app:layout_constraintVertical_bias="0.0"/>
+
     <LinearLayout
         android:id="@+id/deleteOptions"
         android:layout_width="match_parent"
