--- a/PixelSort/app/src/main/res/layout/activity_photos.xml
+++ b/PixelSort/app/src/main/res/layout/activity_photos.xml
@@ -99,10 +99,12 @@
 
         <LinearLayout
             android:id="@+id/sortNewest"
-            android:layout_width="50dp"
-            android:layout_height="70dp"
+            android:layout_width="60dp"
+            android:layout_height="80dp"
             android:layout_gravity="center"
             android:layout_marginLeft="40dp"
+            android:padding="5dp"
+            android:background="#90fdcb6e"
             android:orientation="vertical">
 
             <LinearLayout
@@ -142,9 +144,10 @@
 
         <LinearLayout
             android:id="@+id/sortOldest"
-            android:layout_width="50dp"
-            android:layout_height="70dp"
+            android:layout_width="60dp"
+            android:layout_height="80dp"
             android:layout_gravity="center"
+            android:padding="5dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -184,9 +187,10 @@
 
         <LinearLayout
             android:id="@+id/sortTime"
-            android:layout_width="50dp"
-            android:layout_height="70dp"
+            android:layout_width="60dp"
+            android:layout_height="80dp"
             android:layout_gravity="center"
+            android:padding="5dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -226,10 +230,11 @@
 
         <LinearLayout
             android:id="@+id/sortObjects"
-            android:layout_width="50dp"
-            android:layout_height="70dp"
+            android:layout_width="60dp"
+            android:layout_height="80dp"
             android:layout_gravity="center"
             android:layout_marginRight="40dp"
+            android:padding="5dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -377,38 +382,71 @@
         app:layout_constraintTop_toBottomOf="@+id/sortOptions"
         app:layout_constraintVertical_bias="0.0" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerSortImages"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:padding="6dp"
-        android:visibility="gone"
+        android:layout_height="400dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/navbar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sortOptions"
-        app:layout_constraintVertical_bias="0.0"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sortOptions">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerSortImages"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:padding="6dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/navbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sortOptions"
+            app:layout_constraintVertical_bias="0.0" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/navbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sortOptions">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerSortMonthImages"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:padding="6dp"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/navbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sortOptions"
         app:layout_constraintVertical_bias="0.0"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/navbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sortOptions">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerSortDayImages"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:padding="6dp"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/navbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sortOptions"
         app:layout_constraintVertical_bias="0.0"/>
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerSortAllDayImages"
@@ -501,8 +539,7 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginBottom="20dp"
-        android:background="#3498db"
-        android:visibility="gone"
+        android:background="@drawable/timeline_background"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/navbar"
         app:layout_constraintEnd_toStartOf="@+id/addPhoto"
@@ -510,45 +547,41 @@
 
         <TextView
             android:id="@+id/yearTimeline"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Year"
-            android:background="#3448db"
+            android:background="@drawable/timeline_item_background"
             android:textColor="#ECF0F1"
-            android:fontFamily="@font/roboto"
-            android:padding="10dp"
-            android:layout_marginLeft="20dp"/>
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-
-        <TextView
-            android:id="@+id/monthTimeline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Month"
-            android:background="#3478db"
-            android:textColor="#ECF0F1"
+            android:textAlignment="center"
+            android:gravity="center"
             android:fontFamily="@font/roboto"
             android:padding="10dp"/>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/monthTimeline"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Month"
+            android:background="@drawable/timeline_month_background"
+            android:textColor="#ECF0F1"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:fontFamily="@font/roboto"
+            android:padding="10dp"/>
 
         <TextView
             android:id="@+id/dayTimeline"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Day"
-            android:background="#3478db"
+            android:background="@drawable/timeline_day_background"
             android:textColor="#ECF0F1"
+            android:textAlignment="center"
+            android:gravity="center"
             android:fontFamily="@font/roboto"
             android:padding="10dp"
             android:layout_marginRight="20dp"/>
