--- a/PixelSort/app/src/main/res/layout/album_item.xml
+++ b/PixelSort/app/src/main/res/layout/album_item.xml
@@ -28,13 +28,15 @@
 
         <TextView
             android:id="@+id/albumText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="6dp"
-            android:textColor="@color/black"
-            android:background="#D9949494"
+            android:textColor="@color/white"
+            android:background="#A90984e3"
             android:textSize="20dp"
             android:text="Album Name"
+            android:fontFamily="@font/roboto"
+            android:textAlignment="center"
             app:layout_constraintTop_toTopOf="@id/albumImage"
             app:layout_constraintStart_toStartOf="@id/albumImage"/>
 
