--- a/PixelSort/app/src/main/res/layout/activity_album_create.xml
+++ b/PixelSort/app/src/main/res/layout/activity_album_create.xml
@@ -33,17 +33,20 @@
             android:id="@+id/albumName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
+            android:gravity="center"
             android:hint="Album Name"
+            android:inputType="text"
+            android:textColor="#ECF0F1"
             android:textColorHint="#ECF0F1"
             android:textSize="25dp"
             android:textStyle="bold"
-            android:textColor="#ECF0F1"
-            android:fontFamily="@font/roboto"
-            android:inputType="text"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/saveAlbum"
+            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toEndOf="@+id/albumBack"
-            app:layout_constraintEnd_toStartOf="@+id/saveAlbum"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.492" />
 
         <LinearLayout
             android:id="@+id/saveAlbum"
