--- a/PixelSort/app/src/main/res/layout/album_item.xml
+++ b/PixelSort/app/src/main/res/layout/album_item.xml
@@ -50,16 +50,16 @@
 
         <ImageView
             android:id="@+id/removeImage"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
             android:visibility="gone"
-            android:src="@drawable/remove_image"
+            android:src="@drawable/select_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/albumText"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
