--- a/PixelSort/app/src/main/res/layout/activity_photos.xml
+++ b/PixelSort/app/src/main/res/layout/activity_photos.xml
@@ -104,7 +104,7 @@
             android:layout_gravity="center"
             android:layout_marginLeft="40dp"
             android:padding="5dp"
-            android:background="#90fdcb6e"
+            android:background="#70fdcb6e"
             android:orientation="vertical">
 
             <LinearLayout
@@ -372,15 +372,32 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/photosAmount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/image_amount_background"
+        android:fontFamily="@font/roboto"
+        android:padding="5dp"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="#ECF0F1"
+        android:textSize="18dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sortOptions" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerGalleryImages"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="2dp"
         android:padding="6dp"
         app:layout_constraintBottom_toTopOf="@+id/navbar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sortOptions"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/photosAmount" />
 
     <LinearLayout
         android:layout_width="match_parent"
